@@ -171,6 +171,7 @@ David Grohmann
 Christian Grothoff
 Vladislav Guberinić
 Gideon N. Guillen
+Aman Gupta
 Christian Hammond
 Erick Hamness
 Fred Hampton
